--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "gulp": "^3.9.1"
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1"
   },
   "scripts": {
     "test": "watch"
