--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "gulp": "^3.9.1",
+    "gulp-debug": "^3.1.0",
     "gulp-eslint": "^3.0.1"
   },
   "scripts": {
